--- a/examples/index.html
+++ b/examples/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Spotify Wrapper Test</title>
 </head>
+
 <body>
+
+  <div id="albums"></div>
+
   <script src="../dist/spotify-wrapper.umd.js"></script>
+
   <script>
-    console.log(spotifyWrapper);
-    const albums = spotifyWrapper.searchAlbums('Projota');
+    const spotify = new SpotifyWrapper({
+      token: 'BQAusl80HVldc1-l-JZ0K9V-3NAymvzIQWWlFdoSa3odXxPXgjZWG9QWRZaNBVoeYiGTR-EEv-JxCzQ5ZrYhHgF_vIFH1_bdaMMvqOkD20tVukhgiFZypQvk3bXGya7NZfOYV_pBXtcTvMJ_BbLGxWmPVRK3cFIUyAhm53MwgoqDn7GcS737cbZ6ywN4IBhncQNv06WEkykzNW1pBUxWl3xudJiWnylpOxyAI0C2qfCnSrdF7SvT19PK3owdt02dX6a2E6fgKBs5beFZuQECgetJ'
+    })
+
+    const albums = spotify.search.albums('projota');
     const albumsEl = document.getElementById('albums');
 
     albums
-        .then(data => {
-          markup = data.albums.items.map(item =>
-            `<img src='${item.images[0].url}' alt='${item.name}' />`
-          ).join('');
+      .then(data => {
+        markup = data.albums.items.map(item =>
+          `<img src='${item.images[0].url}' alt='${item.name}' />`
+        ).join('');
 
-          albumsEl.innerHTML = markup;
-        })
+        albumsEl.innerHTML = markup;
+      })
   </script>
 </body>
+
 </html>
